--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "os-utils": "0.0.14",
     "socket.io": "^4.0.0"
   }
